# familylog

./: .env.example  .gitignore  LLAMA_MIGRATION.md  README.md  VULNERABILITIES.md  collect.py  download_models.py  handle_run.py  main.py  messages.csv  process.py  pyproject.toml  reset.py  run.py  run_summary.py  setup_bot.py  test.py  test_stt.py  test_whisper.py
src/: config.py  logger.py
src/familylog/: config.py
src/familylog/LLMs_calls/: calls.py  client.py  model_manager.py
src/familylog/bot/: keyboards.py
src/familylog/collector/: telegram.py
src/familylog/processor/: assembler.py  documents.py  obsidian_writer.py  stt.py  summary.py  vision.py
src/familylog/schema/: llm.py
src/familylog/storage/: database.py  models.py  telegram_files.py
vault_templates/: AGENT_CONFIG.md  TESTING_GUIDE.md
vault_templates/intents/: calendar.md  diary.md  note.md  reminder.md  task.md
