[project]
name = "familylog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "onnx-asr>=0.10.2",
    "onnxruntime>=1.24.2",
    "openai>=2.24.0",
    "parakeet-mlx>=0.5.1",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.46",
]
